qlcplus (4.14.1) stable; urgency=low

  * engine: fix crash when using multiple RGBMtrix
  * Show Manager: fix hanging with an infinite duration EFX
  * Simple Desk: fix crash when resetting a channel with no fixture associated
  * Input Profiles: update Launchpad Mini profiles with color table (thanks to Jan Fries)
  * New fixture: beamZ MHL75 Hybrid Moving Head (thanks to Mikko Wuokko)
  * New fixtures: Eurolite LED TSL-1000 Scan MK2, Varytec LED Theater Spot 100 (thanks to Christoph Wieser)
  * New fixtures: Briteq BT Theatre 250EZ + Mk2 + Mk3 (thanks to Christoph Müllner)
  * New fixture: Showtec Spectral M800 IPX (thanks to Bram Janssen)
  * New fixture: Briteq LED UV-Gun (thanks to Freddy Hoogstoel)
  * New fixture: Eurolite LED Twin Scan Bar (thanks to Mitsch)
  * New fixture: Eurolite TMH-11 Moving-Head Wash (thanks to Simeon08 & ReComplexed)
  * New fixture: Chauvet Ovation H-105WW (thanks to Matthew Valeri)

  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 30 Mar 2025 18:19:20 +0200

qlcplus (4.14.0) stable; urgency=low

  * engine: fix flashing fade out
  * engine: add stopOnExit, waitFunctionStart and waitFunctionStop commands to Script - see documentation (thanks to ldebs)
  * engine: introduce RGBScript v3 and allow up to 5 colors (thanks to Hans-Jürgen Tappe)
  * engine/RGBMatrix: rewind animated GIFs on startup
  * UI: adjust audio volume on video intensity change
  * UI/Fixture Manager: limit the number of RGB panel columns for RGBW to avoid crash
  * UI/Function Wizard: improved with more VC widget creation (thanks to 8-Lambda-8)
  * UI/Fixture Group Editor: allow to add fixtures top to bottom and left to right (thanks to Yestalgia)
  * UI/Show Manager: show step notes on the timeline (thanks to anarchid)
  * UI/Show Manager: handle CTRL+mouse wheel to zoom in/out
  * Virtual Console/Slider: send feedback on override button press
  * Virtual Console/Sped Dial: fix foreground color setting on Windows